--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0",
+    "jquery": "^3.7.0",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-waypoint": "^10.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -24,6 +27,13 @@
       "react-app/jest"
     ]
   },
+  "plugins": [
+    "jquery"
+  ],
+  "rules": {
+    "jquery/no-global-selector": 2,
+    "jquery/no-ajax": 2
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -35,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-jquery": "^1.5.1"
   }
 }
