--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.0",
     "express": "^4.18.2",
     "formik": "^2.4.2",
+    "framer-motion": "^10.16.0",
     "jquery": "^3.7.0",
     "mixitup": "^3.3.1",
     "nodemailer": "^6.9.4",
